--- a/views/document/header.ejs
+++ b/views/document/header.ejs
@@ -56,7 +56,7 @@
         <span class="x-right" style="line-height:40px">共有数据：
           <%= headers.length %> 条</span>
       </xblock>
-      <table class="layui-table">
+      <table class="layui-table" lay-filter="demo">
         <thead>
           <tr>
             <th>
@@ -67,6 +67,7 @@
             <th>摘要编号</th>
             <th>摘要名称</th>
             <th>操作</th>
+            <th>工具条</th>
           </tr>
         </thead>
         <tbody>
@@ -91,6 +92,8 @@
                   <i class="layui-icon">&#xe640;</i>
                 </a>
               </td>
+              <td lay-data="{fixed: 'right', align:'center', toolbar: '#barDemo'}">
+              </td>
             </tr>
             <% } %>
         </tbody>
@@ -106,8 +109,49 @@
         </div>
       </div>
 
+      <!-- test -->
+      <!-- <table id="demo" lay-filter="demo"></table> -->
+
     </div>
+    <script type="text/html" id="barDemo">
+      <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+      <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+      <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    </script>
     <script>
+
+      layui.use('table', function () {
+        var table = layui.table;
+
+        //监听工具条
+        table.on('tool(demo)', function (obj) {
+          var data = obj.data;
+          if (obj.event === 'detail') {
+            layer.msg('Code：' + data.code + ' 的查看操作');
+          } else if (obj.event === 'del') {
+            layer.confirm('真的删除行么', function (index) {
+              obj.del();
+              //
+              layer.close(index);
+            });
+          } else if (obj.event === 'edit') {
+            layer.alert('编辑行：<br>' + JSON.stringify(data))
+          }
+        });
+        //第一个实例
+        // table.render({
+        //   elem: '#demo'
+        //   , height: 315
+        //   , url: '/api/header/' //数据接口
+        //   , page: true //开启分页
+        //   , cols: [[ //表头
+        //     { field: 'code', title: '摘要编号', width: 80, sort: true, fixed: 'left' }
+        //     , { field: 'name', title: '摘要名称', width: 80 }
+        //   ]]
+        // });
+
+      });
+
       layui.use('laydate', function () {
         var laydate = layui.laydate;
 
@@ -123,28 +167,28 @@
       });
 
       /*用户-停用*/
-      function member_stop(obj, id) {
-        layer.confirm('确认要停用吗？', function (index) {
+      // function member_stop(obj, id) {
+      //   layer.confirm('确认要停用吗？', function (index) {
 
-          if ($(obj).attr('title') == '启用') {
+      //     if ($(obj).attr('title') == '启用') {
 
-            //发异步把用户状态进行更改
-            $(obj).attr('title', '停用')
-            $(obj).find('i').html('&#xe62f;');
+      //       //发异步把用户状态进行更改
+      //       $(obj).attr('title', '停用')
+      //       $(obj).find('i').html('&#xe62f;');
 
-            $(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
-            layer.msg('已停用!', { icon: 5, time: 1000 });
+      //       $(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
+      //       layer.msg('已停用!', { icon: 5, time: 1000 });
 
-          } else {
-            $(obj).attr('title', '启用')
-            $(obj).find('i').html('&#xe601;');
+      //     } else {
+      //       $(obj).attr('title', '启用')
+      //       $(obj).find('i').html('&#xe601;');
 
-            $(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
-            layer.msg('已启用!', { icon: 5, time: 1000 });
-          }
+      //       $(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
+      //       layer.msg('已启用!', { icon: 5, time: 1000 });
+      //     }
 
-        });
-      }
+      //   });
+      // }
 
       /*用户-删除*/
       function member_del(obj, id) {
@@ -169,26 +213,32 @@
       }
 
 
-      form.on('submit(add)', function (data) {
-        //console.log(data);
-        var headercode = $('input[name=headercode]').val(),
-          headername = $('input[name=headername]').val();
+      layui.use('form', function () {
+        var form = layui.form;
+        form.on('submit(add)', function (data) {
+          //console.log(data);
+          var headercode = $('input[name=headercode]').val(),
+            headername = $('input[name=headername]').val();
 
-        $(this).ajaxSubmit({
-          type: 'post', // 提交方式 get/post
-          url: '/header', // 需要提交的 url
-          //dataType: "json",
-          data: {
-            'headercode': headercode,
-            'headername': headername
-          },
-          success: function (data) {
-            alert("success!");
-          }
-          //$(this).resetForm(); // 提交后重置表单
+          $(this).ajaxSubmit({
+            type: 'post', // 提交方式 get/post
+            url: '/header', // 需要提交的 url
+            //dataType: "json",
+            data: {
+              'headercode': headercode,
+              'headername': headername
+            },
+            success: function (data) {
+              alert("success!");
+            }
+            //$(this).resetForm(); // 提交后重置表单
+          });
+          return false; // 阻止表单自动提交事件
         });
-        return false; // 阻止表单自动提交事件
+        //各种基于事件的操作，下面会有进一步介绍
       });
+
+
 
 
     </script>
