--- a/views/document/header.ejs
+++ b/views/document/header.ejs
@@ -70,7 +70,7 @@
               <a title="查看"  onclick="x_admin_show('编辑','order-view.html')" href="javascript:;">
                 <i class="layui-icon">&#xe63c;</i>
               </a>
-              <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
+              <a title="删除" onclick="member_del(this,'<%= headers[i].code %>')" href="javascript:;">
                 <i class="layui-icon">&#xe640;</i>
               </a>
             </td>
@@ -130,9 +130,42 @@
       }
 
       /*用户-删除*/
+      /*function member_del(obj,headercode){
+      var headercode = $('input[name=headercode]').val(),
+
+          layer.confirm('确认要删除吗？',function(index){
+              //发异步删除数据
+              $(obj).parents("tr").remove();
+              layer.msg('已删除!',{icon:1,time:1000});
+          });
+      }*/
+
       function member_del(obj,id){
           layer.confirm('确认要删除吗？',function(index){
               //发异步删除数据
+
+
+    $.ajax({
+        type: "POST",// 此处发送的是POST请求
+        url: "/header",
+        data: {
+             _method:"DELETE", // 将请求转变为DELETE请求
+             code: headercode
+        },
+        success: function (data) {
+            console.log(data);
+            if (data.status == 200) {
+                alert("删除成功");
+                location.reload(true);
+            } else {
+                alert(data.message);
+            }
+       },
+       error: function (data) {
+            console.log(data);
+       }
+    });
+
               $(obj).parents("tr").remove();
               layer.msg('已删除!',{icon:1,time:1000});
           });
@@ -150,7 +183,6 @@
             $(".layui-form-checked").not('.header').parents('tr').remove();
         });
       }
-
 
       form.on('submit(add)', function(data){
             //console.log(data);
