--- a/views/document/tableReload.ejs
+++ b/views/document/tableReload.ejs
@@ -8,6 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="/layui/css/layui.css"  media="all">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script> 
+  <script src="http://malsup.github.com/jquery.form.js"></script>
+
   <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
 <body>
@@ -32,22 +35,25 @@
 <xblock>
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
         <button class="layui-btn" onclick="x_admin_show('添加用户','/addheader')"><i class="layui-icon"></i>添加</button>
-        <span class="x-right" style="line-height:40px">共有数据： 条</span>
 </xblock>
 </div>
  
-<table class="layui-hide" id="LAY_table_user" lay-filter="user"></table> 
+<table class="layui-hide" id="LAY_table_header" lay-filter="head"></table> 
                
           
 <script src="/lib/layui/layui.js" charset="utf-8"></script>
 <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
+<script type="text/html" id="barDemo">
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+</script>
 <script>
 layui.use('table', function(){
   var table = layui.table;
   
   //方法级渲染
   table.render({
-    elem: '#LAY_table_user'
+    elem: '#LAY_table_header'
     ,url: '/api/header'
     ,cols: [[ //表头
       {type:'checkbox', fixed: 'left'}
@@ -82,6 +88,44 @@ layui.use('table', function(){
     var type = $(this).data('type');
     active[type] ? active[type].call(this) : '';
   });
+
+
+table.on('tool(head)', function(obj){ //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+  var data = obj.data; //获得当前行数据
+  var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+  var tr = obj.tr; //获得当前行 tr 的DOM对象
+  if(layEvent === 'del'){ //删除
+    layer.confirm('真的删除行么', function(index){
+         //向服务端发送删除指令
+         console.log(obj.data.code);
+        $.ajax({
+           type : "post",
+           url: "/deleteheader",
+           data:{
+              'headercode' : obj.data.code
+            },
+           success: function(data) { 
+              //判断是否删除成功
+              $(obj).parents("tr").remove();
+                 layer.msg('已删除!',{icon:1,time:1000});
+                 layer.close(index);//关闭
+           }
+        });
+        obj.del(); //删除对应行（tr）的DOM结构，并更新缓存
+        layer.close(index);
+    });
+  } else if(layEvent === 'edit'){ //编辑
+    //do something
+    
+    //同步更新缓存对应的值
+    obj.update({
+      headercode: '123'
+      ,headername: 'xxx'
+    });
+  }
+});
+
+
 });
 </script>
 
