--- a/views/document/tableTest.ejs
+++ b/views/document/tableTest.ejs
@@ -26,6 +26,8 @@
       <a>
         <cite>导航元素</cite></a>
     </span>
+    <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
+      <i class="layui-icon" style="line-height:30px">ဂ</i></a>
   </div>
   <div class="x-body">
     <div class="layui-row">
