--- a/views/document/check.html
+++ b/views/document/check.html
@@ -1,3 +1,4 @@
+<%- layout('style') -%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,8 +14,8 @@
 <div style="margin-bottom: 5px;">          
  
 <!-- 示例-970 -->
-<ins class="adsbygoogle" style="display:inline-block;width:970px;height:90px" data-ad-client="ca-pub-6111334333458862" data-ad-slot="3820120620"></ins>
- 
+<!--<ins class="adsbygoogle" style="display:inline-block;width:970px;height:90px" data-ad-client="ca-pub-6111334333458862" data-ad-slot="3820120620"></ins>
+-->
 </div>
  
 <div class="layui-btn-group demoTable">
@@ -23,7 +24,7 @@
   <button class="layui-btn" data-type="isAll">验证是否全选</button>
 </div>
  
-<table class="layui-table" lay-data="{width: 892, height:332, url:'/api/header', page:true, id:'idTest'}" lay-filter="demo">
+<table class="layui-table" lay-data="{width: 800, height:332, url:'/api/header', page:true, id:'idTest'}" lay-filter="demo">
   <thead>
     <tr>
       <th lay-data="{type:'checkbox', fixed: 'left'}"></th>
