--- a/views/document/tableReload.ejs
+++ b/views/document/tableReload.ejs
@@ -7,11 +7,11 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="../../public/css/font.css">
-  <link rel="stylesheet" href="../../public/css/xadmin.css">
-  <link rel="stylesheet" href="../../public/layui/css/layui.css"  media="all">
-  <script type="text/javascript" src="../../public/js/xadmin.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script> 
+  <link rel="stylesheet" href="./css/font.css">
+  <link rel="stylesheet" href="./css/xadmin.css">
+  <link rel="stylesheet" href="./lib/layui/css/layui.css"  media="all">
+  <script type="text/javascript" src="./js/xadmin.js"></script>
+  <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>-->
 
   <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
@@ -43,7 +43,7 @@
 <table class="layui-hide" id="LAY_table_header" lay-filter="head"></table> 
                
           
-<script src="../../public/layui/layui.js" charset="utf-8"></script>
+<script src="./lib/layui/layui.js" charset="utf-8"></script>
 <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
@@ -57,7 +57,7 @@ layui.use('table', function(){
     elem: '#LAY_table_header'
     ,url: '/api/header'
     ,cols: [[ //表头
-      {type:'checkbox', fixed: 'left'}
+      {checkbox: true, fixed: true}
       ,{field: 'code', title: '摘要编号', width:300, sort: true, fixed: 'left'}
       ,{field: 'name', title: '摘要名称', width:400}
       ,{field: 'operation', title: '操作', fixed: 'right', width:200, align:'center', toolbar: '#barDemo'}
@@ -83,11 +83,28 @@ layui.use('table', function(){
         }
       });
     }
-    ,delCheckData: function(){ //获取选中数据
+    ,delCheckData: function(obj){ //获取选中数据
       var checkStatus = table.checkStatus('idTest');
       var data = checkStatus.data;
-      layer.alert(JSON.stringify(data));
-    }
+      layer.confirm('确定删除吗？ '+ JSON.stringify(data), function(){
+         //向服务端发送删除指令
+        $.ajax({
+           type : "post",
+           url: "/delallheader",
+           data:{
+              'datas' : data
+            },
+           success: function(data) { 
+              //判断是否删除成功
+              $(obj).parents("tr").remove();
+                 layer.msg('已删除!',{icon:1,time:1000});
+                 layer.close(index);//关闭
+           }
+        });
+        obj.del(); //删除对应行（tr）的DOM结构，并更新缓存
+        layer.close(index);
+    });
+      }
 
   };
 
