--- a/views/document/account.ejs
+++ b/views/document/account.ejs
@@ -35,12 +35,12 @@
 
 <xblock>
     <button class="layui-btn layui-btn-danger" data-type="delCheckData"><i class="layui-icon"></i>批量删除</button>
-    <button class="layui-btn" onclick="x_admin_show('添加用户','/addaccount')"><i class="layui-icon"></i>添加</button>
+    <button class="layui-btn" onclick="x_admin_show('添加科目','/addaccount')"><i class="layui-icon"></i>添加</button>
 </xblock>
 </div>
 </div>
  
-<table class="layui-hide" id="LAY_table_account" lay-filter="head"></table> 
+<table class="layui-hide" id="LAY_table_account" lay-filter="acc"></table> 
                
           
 <script src="./lib/layui/layui.js" charset="utf-8"></script>
@@ -114,12 +114,12 @@ layui.use('table', function(){
     active[type] ? active[type].call(this) : '';
   });
 
-table.on('checkbox(head)', function(obj){
+table.on('checkbox(acc)', function(obj){
       console.log(obj)
         });
 
 
-table.on('tool(head)', function(obj){ //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+table.on('tool(acc)', function(obj){ //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
   var data = obj.data; //获得当前行数据
   var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
   var tr = obj.tr; //获得当前行 tr 的DOM对象
