--- a/views/document/tableReload.ejs
+++ b/views/document/tableReload.ejs
@@ -35,7 +35,7 @@
 
 <xblock>
     <button class="layui-btn layui-btn-danger" data-type="delCheckData"><i class="layui-icon"></i>批量删除</button>
-    <button class="layui-btn" onclick="x_admin_show('添加用户','/addheader')"><i class="layui-icon"></i>添加</button>
+    <button class="layui-btn" onclick="x_admin_show('添加摘要','/addheader')"><i class="layui-icon"></i>添加</button>
 </xblock>
 </div>
 </div>
