--- a/views/document/accdoc.ejs
+++ b/views/document/accdoc.ejs
@@ -168,7 +168,7 @@ layui.use('table', function(){
   
   else if(layEvent === 'detail'){ //查看
     var url = "/viewaccdoc?num=" + obj.data.num;
-    x_admin_show('查看凭证',url,obj.data.num);
+    x_admin_show('查看凭证',url);
   /*
     $.ajax({
            type :"post",
