--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,54 +2,91 @@
       <div id="side-nav">
         <ul id="nav">
             <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe6b8;</i>
+            <a href="javascript:;">   
+                            <i class="iconfont">&#xe6b8;</i>
+                            <cite>系统守则</cite>
+                            <i class="iconfont nav_right">&#xe697;</i>
+                        </a>
+                        <ul class="sub-menu" >
+                            <li>
+                                <a href="/regime"> 
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>三大会计制度</cite>
+                                </a>
+                            </li >            
+            </ul>
+            </li>
+            <li>
+                <a href="javascript:;">   
+                    <i class="iconfont">&#xe723;</i>
                     <cite>摘要管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
                 <ul class="sub-menu" >
                     <li>
-                        <a _href="member-list.html">
+                        <a href="/tableReload"> 
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>会员列表</cite>
-                            
+                            <cite>摘要列表</cite>
                         </a>
-                    </li >
-                    <li>
-                        <a _href="member-del.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>会员删除</cite>
-                            
-                        </a>
-                    </li>                    
+                    </li >            
                 </ul>
             </li>
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe723;</i>
-                    <cite>订单管理</cite>
+                    <cite>会计科目管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="order-list.html">
+                        <a href="/account">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>订单列表</cite>
+                            <cite>会计科目表</cite>
                         </a>
                     </li >
                 </ul>
             </li>
             <li>
+                    <a href="javascript:;">
+                        <i class="iconfont">&#xe723;</i>
+                        <cite>凭证管理</cite>
+                        <i class="iconfont nav_right">&#xe697;</i>
+                    </a>
+                    <ul class="sub-menu">
+                        <li>
+                            <a href="/accdoc">
+                                <i class="iconfont">&#xe6a7;</i>
+                                <cite>凭证列表</cite>
+                            </a>
+                        </li >
+                    </ul>
+                </li>
+                <li>
+                        <a href="javascript:;">
+                            <i class="iconfont">&#xe723;</i>
+                            <cite>财务报表</cite>
+                            <i class="iconfont nav_right">&#xe697;</i>
+                        </a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>资产负债表</cite>
+                                </a>
+                            </li >
+                        </ul>
+                    </li>
+            <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe726;</i>
-                    <cite>管理员管理</cite>
+                    <cite>用户管理</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="admin-list.html">
+                        <a href="/manageuser">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>管理员列表</cite>
+                            <cite>用户列表</cite>
                         </a>
                     </li >
                     <li>
@@ -71,6 +108,21 @@
                         </a>
                     </li >
                 </ul>
+            </li>
+            <li>
+                    <a href="javascript:;">
+                        <i class="iconfont">&#xe726;</i>
+                        <cite>客户管理</cite>
+                        <i class="iconfont nav_right">&#xe697;</i>
+                    </a>
+                    <ul class="sub-menu">
+                        <li>
+                            <a href="/manageuser">
+                                <i class="iconfont">&#xe6a7;</i>
+                                <cite>客户列表</cite>
+                            </a>
+                        </li >
+                    </ul>
             </li>
             <li>
                 <a href="javascript:;">
