--- a/views/document/addaccdoc.ejs
+++ b/views/document/addaccdoc.ejs
@@ -38,8 +38,8 @@
       <!--<button class="layui-btn" data-type="reload"><i class="layui-icon">&#xe615;</i></button>-->
     </div> 
     <xblock>
-            <button class="layui-btn" data-type="addLine"><i class="layui-icon"></i>添加</button>
-            <button class="layui-btn" data-type="recordAD"><i class="layui-icon">&#xe61f;</i>录入</button>
+            <button class="layui-btn" data-type="addLine"><i class="layui-icon"></i>新建</button>
+            <button class="layui-btn" data-type="recordAD"><i class="layui-icon">&#xe61f;</i>保存</button>
     </xblock>
 </div>
 
@@ -152,16 +152,10 @@ table.on('tool(addaccdoc)', function(obj){ //注：tool是工具条事件名，t
     });
   }
   else if(layEvent === 'add'){ //添加
-    //判断是否全部非空
-   /* if(!(obj.data.num && obj.data.id && obj.data.deibt 
-    && obj.data.credit && obj.data.headercode && obj.data.headername
-    && obj.data.acccode && obj.data.accname)){
-        layer.alert("该行有空值！");
-    }*/
     if((obj.data.num == "")||(obj.data.id == "")||(obj.data.deibt == "")||
             (obj.data.credit == "")||(obj.data.headercode == "")||
                 (obj.data.headername == "")||(obj.data.acccode == "")||
-                    (obj.data.accname == "")) {layer.alert("该行有空");}
+                    (obj.data.accname == "")) {layer.alert("id为"+obj.data.id+"的凭证有空！");}
     else{
     layer.confirm('添加凭证条目吗？', function(index){
          //向服务端发送保存指令
@@ -219,8 +213,8 @@ table.on('tool(addaccdoc)', function(obj){ //注：tool是工具条事件名，t
 });
 </script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn layui-btn-xs" lay-event="add">添加</a>
-    <a class="layui-btn layui-btn layui-btn-xs" lay-event="save">保存</a>
+    <!--<a class="layui-btn layui-btn layui-btn-xs" lay-event="add">添加</a>
+    <a class="layui-btn layui-btn layui-btn-xs" lay-event="save">保存</a>-->
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 
 </script>
