--- a/views/style.ejs
+++ b/views/style.ejs
@@ -19,7 +19,7 @@
 <body>
     <!-- 顶部开始 -->
     <div class="container">
-        <div class="logo"><a href="./index.html">后台管理系统</a></div>
+        <div class="logo"><a href="./index.html">中小型企业财务管理系统</a></div>
         <div class="left_open">
             <i title="展开左侧栏" class="iconfont">&#xe699;</i>
         </div>
